# horse-therapy-center

./: .gitignore  README.md  division.py
admin/: .gitignore  README.md  pyproject.toml
admin/src/core/: board.py  config.py  database.py  seeds.py
admin/src/core/board/: __init__.py  equipos.py  roles.py  users.py
admin/src/core/cobro/: __init__.py
admin/src/core/contacto/: __init__.py
admin/src/core/contenido/: __init__.py
admin/src/core/dia/: __init__.py
admin/src/core/ecuestre/: __init__.py  archivos.py  docs.py
admin/src/core/equipo/: __init__.py  archivos.py  equipo.py
admin/src/core/institucion/: __init__.py
admin/src/core/jya/: __init__.py  archivos.py  docs.py  pariente_tutor.py  trabajo.py
admin/src/core/pago/: __init__.py
admin/src/core/parienteTutor/: __init__.py
admin/src/core/relacion_equipo_ecuestre/: __init__.py
admin/src/core/situacionPrevisional/: __init__.py
admin/src/core/trabajo/: __init__.py
admin/src/core/user/: __init__.py  roles.py  users.py
admin/src/web/: __init__.py  config.py  oauth.py  storage.py
admin/src/web/api/: contacto.py  contenido.py
admin/src/web/controllers/: __init__.py  auth.py  cobro.py  contacto.py  contenido.py  ecuestre.py  equipo.py  issue.py  issues.py  jya.py  pago.py  reporte.py  users.py
admin/src/web/helpers/: auth.py  handler.py
admin/src/web/schemas/: contacto.py  contenido.py
admin/src/web/templates/: error.html  home.html  (+2 more)
admin/static/: adeudados.csv  historial-caballos.csv  ranking-propuestas.csv  style.css
admin/static/scripts/: graficos.js
admin/tests/: test_home.py
(+123 files in other folders)
