[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Andres Kessler <andresgabriel.kessler@gmail.com>",
"Matias Cuacci <matiascuacci7@gmail.com>",
"Agustina Cabello <cabelloagus000@gmail.com>",
"Augusto Conti <contiaugusto07@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12.3"
flask = "^3.0.3"
pytest = "^8.3.3"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-session = "^0.8.0"
flask-bcrypt = "^1.0.1"
minio = "^7.2.9"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
